[gd_scene load_steps=9 format=3 uid="uid://djkr33bvpx4wv"]

[ext_resource type="Script" path="res://scriptes/main.gd" id="1_h16ri"]
[ext_resource type="PackedScene" uid="uid://dl6aph6gafpig" path="res://scenes/hud.tscn" id="3_bc5xh"]
[ext_resource type="PackedScene" uid="uid://bt1qcr8ogdwy5" path="res://scenes/character_body_2d.tscn" id="3_ftjma"]
[ext_resource type="AudioStream" uid="uid://cbowj5q66wfgq" path="res://resources/sound/spawn.mp3" id="3_fvdxj"]
[ext_resource type="AudioStream" uid="uid://bb5fc5qorlh02" path="res://resources/sound/expl.mp3" id="6_rkik2"]
[ext_resource type="PackedScene" uid="uid://p3wa3ctgf7au" path="res://scenes/tile_map.tscn" id="7_a2xbs"]
[ext_resource type="PackedScene" uid="uid://cwyh5rl4gqbsk" path="res://scenes/stuff.tscn" id="7_h5o0n"]

[sub_resource type="Curve2D" id="Curve2D_6bg8d"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Node" type="Node"]
script = ExtResource("1_h16ri")

[node name="Node2D2" parent="." instance=ExtResource("7_a2xbs")]

[node name="hud" parent="." instance=ExtResource("3_bc5xh")]

[node name="ProgressBar" parent="hud" index="4"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -430.0
offset_right = 430.0
grow_horizontal = 2

[node name="enemyspawntimer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="enemyspawntimer"]
stream = ExtResource("3_fvdxj")

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_6bg8d")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]

[node name="expl" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_rkik2")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(960, 540)

[node name="Node2D" parent="." instance=ExtResource("7_h5o0n")]
visible = false
position = Vector2(291, -106)

[node name="Area2D" parent="Node2D" index="0"]
input_pickable = false

[node name="AnimatedSprite2D" parent="Node2D/Area2D" index="0"]
frame_progress = 0.730969

[node name="stuffspawntimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Character" parent="." instance=ExtResource("3_ftjma")]
visible = false

[connection signal="count_start" from="hud" to="." method="_on_hud_count_start"]
[connection signal="game_exit" from="hud" to="." method="_on_hud_game_exit"]
[connection signal="game_restart" from="hud" to="." method="_on_hud_game_restart"]
[connection signal="game_start" from="hud" to="." method="_game_start"]
[connection signal="game_start" from="hud" to="Node2D2" method="_on_hud_game_start"]
[connection signal="timeout" from="enemyspawntimer" to="." method="_on_enemyspawntimer_timeout"]
[connection signal="area_entered" from="Node2D/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="stuffspawntimer" to="." method="_on_stuffspawntimer_timeout"]
[connection signal="game_over" from="Character" to="." method="_on_game_over"]

[editable path="hud"]
[editable path="Node2D"]
